<resources>
    <string name="app_name">SpacesTorBrute</string>
    <string name="permissions_required">Ну и сасай</string>
    <string name="start_from_id">Начать с ID</string>
    <string name="begin">Начать</string>
    <string name="passwords_label">password1\npassword2\n…</string>
    <string name="stopped">Остановка</string>
    <string name="start">Запуск</string>
    <string name="current_user">Текущий логин: %1$s</string>
    <string name="stop">Остановить</string>
    <string name="results">Результаты</string>
    <string name="success">%1$s: подобрано</string>
    <string name="wrong_password">%1$s: неверный пароль</string>
    <string name="wrong_captcha">%1$s: неправильный код с картинки</string>
    <string name="need_captcha">%1$s: смена прокси</string>
    <string name="user_not_found">%1$s: пользователь не найден</string>
    <string name="unknown_error">%1$s: неизвестная ошибка</string>
    <string name="proxy">прокси</string>
    <string name="proxy_wait">Ожидание прокси %1$d сек</string>
    <string name="login_pass">Пароль=логин</string>
    <string name="passwords">загрузить пароли (%1$d)</string>
    <string name="save_to">Сохранить в (%1$s)</string>
    <string name="not_set">не задано</string>
    <string name="load_login">загрузить логины (%1$d)</string>
    <string name="login_pass_lower">Пароль=логин.toLower</string>
    <string name="need_passwords">Нет паролей</string>
    <string name="target_not_set">Не задан путь сохранения</string>
    <string name="state">Проверено: %1$d подобрано: %2$d</string>

    <string name="source">Source</string>
    <string name="source_url">https://github.com/Di7aK/spaces_brute</string>
</resources>
