<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/startFrom"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_from_id"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        tools:ignore="LabelFor" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/customLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_login"
        android:layout_toEndOf="@id/startFrom"
        tools:ignore="LabelFor,TextFields" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwords"
        android:layout_below="@id/loginPassword"
        tools:ignore="LabelFor,TextFields" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/loginPassword"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/startFrom"
        android:text="@string/login_pass"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/loginPasswordLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startFrom"
        android:layout_toEndOf="@id/loginPassword"
        android:text="@string/login_pass_lower"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_to"
        android:layout_below="@id/passwords" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results"
        android:text="@string/begin" />

    <TextView
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStart"
        android:gravity="center"
        tools:text="@string/state"
        android:textSize="16sp"
        android:padding="10dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/state"
        android:layout_alignParentBottom="true"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>